fix gaps on currency selectors throughout the app

--- a/src/App/components/PageHeader/Account/Account.module.css
+++ b/src/App/components/PageHeader/Account/Account.module.css
@@ -258,7 +258,12 @@ top: -20px;
     flex-direction: row;
     align-items: center;
     gap: 4px;
-    color: var(--text-grey-light)
+    color: var(--text-grey-light);
+    transition: all var(--animation-speed) ease-in-out
+}
+
+.actions_container button:hover, .actions_container a:hover{
+opacity: 0.8;
 }
 .actions_container button:first-of-type{
     color: var(--negative);
