--- a/src/components/Portfolio/EchangeBalance/Deposit/DepositCurrencySelector/DepositCurrencySelector.module.css
+++ b/src/components/Portfolio/EchangeBalance/Deposit/DepositCurrencySelector/DepositCurrencySelector.module.css
@@ -68,6 +68,7 @@
     justify-content: space-between;
     align-items: center;
     width: 30%;
+    gap: 4px;
 }
 
 .token_select img {
